---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"fn test<T1,>() -> void {}\")"
---
SOURCE_FILE@0..25
  FN@0..25
    SIG@0..23
      FN_KW@0..2 "fn"
      WHITESPACE@2..3 " "
      NAME@3..7
        IDENT@3..7 "test"
      BOUND_TYPES@7..12
        LESS@7..8 "<"
        BOUND_TYPE@8..10
          NAME@8..10
            IDENT@8..10 "T1"
        COMMA@10..11 ","
        GREATER@11..12 ">"
      PARAM_LIST@12..14
        LEFT_PAREN@12..13 "("
        RIGHT_PAREN@13..14 ")"
      WHITESPACE@14..15 " "
      RETURN_TYPE@15..23
        ARROW@15..17 "->"
        WHITESPACE@17..18 " "
        NAMED_TYPE@18..23
          PATH@18..23
            PATH_TYPE@18..23
              NAME@18..22
                IDENT@18..22 "void"
              WHITESPACE@22..23 " "
    BLOCK@23..25
      LEFT_BRACE@23..24 "{"
      RIGHT_BRACE@24..25 "}"
